Add more Convert output formats, per-dialect SQL, and Latin CSV fix-up
Output formats: JSON, XML, an HTML table, a Markdown table, YAML, and
Excel (.xlsx) join the existing SQL and CSV, so every supported input
format (now including XML too, parsed by treating whichever tag is
most common among the root's direct children as one row per
occurrence) can produce any of them. XLSX is the one binary output —
ConvertDialog shows a row/column-count placeholder in the preview and
writes the real bytes only on Save As; Copy is disabled for it since
binary output can't usefully go to a text clipboard. XML is written
with the JDK's own XMLStreamWriter (StAX) so escaping is never
hand-rolled, and XmlTableParser is hardened against XXE (DTDs and
external entities disabled) since it can be pointed at
attacker-controlled XML via the Paste/URL tabs.

SQL output now targets a specific dialect (SQLite, MySQL, PostgreSQL,
Oracle, or Microsoft SQL Server) via SqlDialect, an enum with
per-constant behavior rather than a single shared template — because
these five genuinely disagree on more than column-type spelling:
none support literal CREATE OR REPLACE TABLE, so each emits its own
correct drop/create idiom (a small PL/SQL block for Oracle, which has
no DROP TABLE IF EXISTS); Oracle has no explicit "start transaction"
statement at all; and most importantly, Oracle's INSERT has no
multi-row VALUES list of any kind, so SqlTableWriter rewrites it as
INSERT ALL for that dialect, while MS SQL Server's 1000-row-per-INSERT
limit is handled by batching across multiple statements. Identifiers
are also truncated to each dialect's actual limit (30 chars for
Oracle).

Also adds a one-click "Convert Latin CSV to English…" file-table
context menu item (visible for any .csv) that turns a ';'-delimited,
comma-decimal CSV into a ','-delimited, dot-decimal one — only cells
that look like a properly-formatted number are reinterpreted, so a
literal comma inside a quoted text field (e.g. "Silva, João") is 